--- a/views/package.json
+++ b/views/package.json
@@ -41,6 +41,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "resolutions": {"react-error-overlay": "6.0.9"},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -53,7 +54,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4040",
+  "proxy": "http://localhost:4040/",
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
